chore: add `i18n` on `$tag` page

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -9,8 +9,11 @@
   "searchingCoach": {
     "filter": {
       "language": "Nach Sprache filtern",
-      "tag": "Nach Schlagwort filtern",
+      "tag": "Nach Thema filtern",
       "submitCta": "Filter anwenden"
     }
+  }, 
+  "blogpostByTag":{
+    "title":"BLOGPOSTS für den Tag "
   }
 }
