--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,6 +13,9 @@
       "submitCta": "Apply filter"
     }
   },
+  "blogpostCard": {
+    "ctaToBlogpost": "Continue reading..."
+  },
   "blogpostByTag":{
     "title":"BLOGPOSTS for the tag "
   }
