--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -7,13 +7,32 @@
     }
   },
   "searchingCoach": {
+    "languageTags": {
+      "de": "Deutsch",
+      "en": "English",
+      "dan": "Dansk",
+      "por": "Português",
+      "pol": "Polskie",
+      "nl": "Nederlands",
+      "uk": "Український",
+      "ukr": "Український",
+      "ru": "русский",
+      "esp": "Español",
+      "fr": "Français",
+      "tur": "Türk",
+      "arab": "عربي",
+      "nor": "Norsk"
+    },
     "filter": {
+      "showFilter": "Filter anzeigen",
       "language": "Nach Sprache filtern",
       "tag": "Nach Thema filtern",
       "submitCta": "Filter anwenden"
     },
     "result": "Zuhörer*innen gefunden.",
-    "noResult": "Keine Zuhörer*innen zu diesen Filtern gefunden :("
+    "noResult": "Keine Zuhörer*innen zu diesen Filtern gefunden :(",
+    "emergency": "Schnell erreichbar",
+    "languages": "Sprachen"
   },
   "blogpostCard": {
     "ctaToBlogpost": "Weiterlesen..."
