--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,20 +7,37 @@
     }
   },
   "searchingCoach": {
+    "languageTags": {
+      "de": "Deutsch",
+      "en": "English",
+      "dan": "Dansk",
+      "por": "Português",
+      "pol": "Polskie",
+      "nl": "Nederlands",
+      "uk": "Український",
+      "ukr": "Український",
+      "ru": "русский",
+      "esp": "Español",
+      "fr": "Français",
+      "tur": "Türk",
+      "arab": "عربي",
+      "nor": "Norsk"
+    },
     "filter": {
+      "showFilter": "Filter anzeigen",
       "language": "Filter by language",
       "tag": "Filter by topic",
       "submitCta": "Apply filter"
     },
-    "result":"listeners found.",
-    "noResult":"No listeners found for these filters :("
+    "result": "listeners found.",
+    "noResult": "No listeners found for these filters :(",
+    "emergency": "Quick response",
+    "languages": "Languages"
   },
   "blogpostCard": {
     "ctaToBlogpost": "Continue reading..."
   },
-  "blogpostByTag":{
-    "title":"BLOGPOSTS for the tag "
+  "blogpostByTag": {
+    "title": "BLOGPOSTS for the tag "
   }
-
 }
-
