--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -32,10 +32,7 @@
     "result": "listeners found.",
     "noResult": "No listeners found for these filters :(",
     "emergency": "Quick response",
-    "languages": "Languages",
-    "email": "Email",
-    "phone": "Phone",
-    "website": "Website"
+    "languages": "Languages"
   },
   "blogpostCard": {
     "ctaToBlogpost": "Continue reading..."
