--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,7 +3,7 @@
     "title": {
       "network": "Our network",
       "partner": "Our company partners",
-      "media": "Redezeit in de Media"
+      "media": "Redezeit in the media"
     }
   },
   "searchingCoach": {
