refactor: changed code name to lowercase

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -24,9 +24,9 @@
       "nor": "Norsk"
     },
     "genderTags": {
-      "Weiblich": "Weiblich",
-      "Männlich": "Männlich",
-      "Diverse": "Diverse"
+      "weiblich": "Weiblich",
+      "männlich": "Männlich",
+      "divers": "Divers"
     },
     "filter": {
       "showFilter": "Filter anzeigen",
